# dynamicpy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/dynamic_modules/: __init__.py  errors.py  loader.py  utils.py
src/dynamicpy/: __init__.py  dependencies.py  errors.py  loader.py  model.py  utils.py  widgets.py
tests/: __init__.py
