[tool.poetry]
name = "dynamicpy"
version = "1.0.0"
description = "A python module for dynamically interacting with objects to improve expandability."
authors = ["NimajnebEC <nimajnebec@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "dynamicpy", from = "src" }]

[tool.poetry.dependencies]
typeguard = "^4.0.0"
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
flake8-length = "^0.3.1"
pytest = "^7.3.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
