[tool.poetry]
name = "dynamicpy"
version = "1.3.0"
description = "A python module for dynamically interacting with objects to improve expandability."
authors = ["NimajnebEC <nimajnebec@users.noreply.github.com>"]
repository = "https://github.com/NimajnebEC/dynamicpy"
packages = [{ include = "dynamicpy", from = "src" }]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
typeguard = "^4.0.0"
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 92
